--- a/template/index.html
+++ b/template/index.html
@@ -15,13 +15,15 @@
 
 <div class="row">
   <div class="leftcolumn">
+    {% for post in posts reversed %}
     <div class="card">
       <a style="text-decoration: none; color: black;" href="/post/{{post.id}}">
-        <h2>Title</h2>
-        <h5>Created At</h5>
-        <p>Some text...</p>
+        <h2>{{post.title}}</h2>
+        <h5>{{post.created_at}}</h5>
+        <p>{{post.content}}</p>
       </a>
     </div>
+    {% endfor %}
   </div>
 </div>
 </body>
