--- a/template/post.html
+++ b/template/post.html
@@ -15,15 +15,11 @@
 
 <div class="row">
   <div class="leftcolumn">
-    {% for post in posts reversed %}
     <div class="card">
-      <a style="text-decoration: none; color: black;" href="/post/{{post.id}}">
         <h2>{{post.title}}</h2>
         <h5>{{post.created_at}}</h5>
-        <p>{{post.content|truncatewords:20}}</p>
-      </a>
+        <p>{{post.content}}</p>
     </div>
-    {% endfor %}
   </div>
 </div>
 </body>
