--- a/template/index.html
+++ b/template/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Django Blog Project</title>
     <link rel="stylesheet" href="{% static 'css/style.css'%}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
 <div class="header">
@@ -26,17 +27,34 @@
     {% endfor %}
   </div>
 </div>
-{% if paginate.has_previous %}
-  <button style="text-align: center;"><h4><a style="text-decoration: none; color: black;" href="?page=1">&laquo; First</a></h4></button>
-  <button style="text-align: center;"><h4><a style="text-decoration: none; color: black;" href="?page={{paginate.previous_page_number}}">previous</a></h4></button>
-{% elif paginate.has_next %}
-  <button style="text-align: center;"><h4><a style="text-decoration: none; color: black;" href="?page={{paginate.next_page_number}}">{{paginate.next_page_number}}</a></h4></button>
-  <button style="text-align: center;"><h4><a style="text-decoration: none; color: black;" href="?page={{paginate.paginator.num_pages}}">last &raquo;</a></h4></button>
-{% endif %}
-<br>
-<h2>Page {{paginate.number}} of {{paginate.paginator.num_pages}}</h2>
 
+<nav aria-label="..." class="d-flex justify-content-center">
+  <ul class="pagination">
+    {% if paginate.has_previous %}
+    <li class="page-item">
+      <a class="page-link" href="?page=1">&laquo; First</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="?page={{paginate.previous_page_number}}">{{paginate.previous_page_number}}</a>
+    </li>
+    {% endif %}
+    <li class="page-item active">
+      <span class="page-link">
+        {{paginate.number}}
+        <span class="sr-only">(current)</span>
+      </span>
+    </li>
+    {% if paginate.has_next %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{paginate.next_page_number}}">{{paginate.next_page_number}}</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="?page={{paginate.paginator.num_pages}}">Last &raquo;</a>
+    </li>
+    {% endif %}
+  </ul>
+</nav>
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
